@@ -14,6 +14,28 @@ sub register {
     };
   };
 
+  # Add event handler for korap requests
+  my $piwik_conf = $mojo->config('Piwik');
+  if ($piwik_conf) {
+    $piwik_conf->{append} //= '';
+  }
+  else {
+    $piwik_conf = { append => '' };
+    $mojo->config(Piwik => $piwik_conf);
+  };
+
+  my $url = $piwik_conf->{url};
+
+  $piwik_conf->{append} .= <<APPEND;
+;window.addEventListener('korapRequest', function(e) {
+    let _paq=window._paq=window._paq||[];
+    _paq.push(['setDocumentTitle', e.detail.title]);
+    _paq.push(['setReferrerUrl', location.href]);
+    _paq.push(['setCustomUrl', e.detail.url]);
+    _paq.push(['trackPageView']);
+})
+APPEND
+
   # Load Piwik if not yet loaded
   unless (exists $mojo->renderer->helpers->{piwik_tag}) {
     $mojo->plugin('Piwik');
@@ -37,27 +59,19 @@ sub register {
       }
   );
 
+  # Add tracking code as <script/> instead of inline
+
+  $mojo->csp->add('script-src' => $url);
+  $mojo->csp->add('connect-src' => $url);
+  $mojo->csp->add('img-src' => $url);
+
+  # Set track script for CSP compliant tracking
+  $mojo->routes->any('/js/tracking.js')->piwik('track_script');
+
   # Add piwik tag to scripts
   $mojo->content_block(scripts => {
-    inline => '<%= piwik_tag %>'
+    inline => q!<%= piwik_tag 'as-script' %>!
   });
-
-  # Add event handler for korap requests
-  $mojo->content_block(scripts => {
-    inline => <<'SCRIPT'
-% if (stash('piwik.embed')) {
-  %= javascript begin
-window.addEventListener('korapRequest', function(e) {
-  _paq.push(['setDocumentTitle', e.detail.title]);
-  _paq.push(['setReferrerUrl', location.href]);
-  _paq.push(['setCustomUrl', e.detail.url]);
-  _paq.push(['trackPageView']);
-});
-  % end
-% }
-SCRIPT
-  });
-
 
   # If all requests should be pinged,
   # establish this hook
